<resources>
    <string name="app_name">BusApp</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="we_will_sedn_you_one_time_otp_on_this_mobile_number">WE WILL SEND YOU ONE TIME OTP ON THIS MOBILE NUMBER</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="_91">+91-</string>
    <string name="_99925_85103">99925 85103</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_the_otp_send_on">Enter the OTP send on</string>
    <string name="didn_t_recived_the_otp">Didn\'t Recived The OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="send">Send</string>
    <string name="bus_record">Bus Record</string>
    <string name="please_enter_the_data_of_your_bus_below">Please Enter The Data Of Your Bus Below:</string>
    <string name="save">Save</string>
    <string name="you_have_filled_the_above_credentials_correctly_and_by_ticking_the_box_you_want_to_submit_the_credentials">You have filled the above credentials correctly and by ticking the box you want to submit the credentials.</string>
    <string name="reading">Reading</string>
    <string name="staff">Staff</string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="total">Total</string>
    <string name="students">Students</string>
    <string name="please_type_your_name">Please Type your name</string>
    <string name="choose_your_bus_number">Choose your Bus Number</string>
    <string name="your_selected_date_will_appeare_here">Your Selected date will appeare here</string>
    <string name="set_date">Set Date</string>
    <string name="please_fill_the_options_below">Please Fill the options below :</string>
    <string name="daily_bus_record">Daily Bus Record</string>
    <string name="title_activity_teacher">Teacher</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>